--- a/src/styles/queryEditor.m.css
+++ b/src/styles/queryEditor.m.css
@@ -14,3 +14,10 @@
     margin-bottom: 8px;
     min-height: 200px;
 }
+
+.creationButtonAligner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
