--- a/src/styles/select/selectNode.m.css
+++ b/src/styles/select/selectNode.m.css
@@ -28,7 +28,7 @@
 
 .activeSelectNodes {
     display: flex;
-    flex-wrap: wrap;
-    height: fit-content;
     min-width: fit-content;
+    flex-direction: column;
+    overflow-y: auto;
 }
