--- a/src/styles/sort/sortNode.m.css
+++ b/src/styles/sort/sortNode.m.css
@@ -21,7 +21,7 @@
 
 .activeSortNodes {
     display: flex;
-    flex-wrap: wrap;
-    height: fit-content;
     min-width: fit-content;
+    flex-direction: column;
+    overflow-y: auto;
 }
